# coodle

./: CMakeLists.txt  appcomponent.h  doodle.cpp  doodle.h  main.cpp
controller/: doodlecontroller.cpp  doodlecontroller.h
websocket/: doodlesync.cpp  doodlesync.h  wslistener.cpp  wslistener.h
